--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,7 +25,7 @@
 @import "layout/_navmain";
 @import "layout/_logo";
 @import "layout/_header-menu";
-@import "layout/_topbar";
+@import "layout/_banner";
 
 // Page-specific stylesheets
 
