--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -1,4 +1,5 @@
 //Color
+$color-base: #71654E;
 $color-brand: #71654E;
 $color-gray: #E6E6E6;
 $color-orange: #F7A23B;
@@ -25,6 +26,7 @@ $color-border-input: #D9D9D9;
 $color-text-input: #808080;
 
 $theme-colors: (
+        base: $color-brand,
         brand: $color-brand,
         gray: $color-gray,
         orange: $color-orange,
