--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -6,6 +6,7 @@ $color-orange: #F7A23B;
 $color-yellow: #FAAD14;
 $color-red: #F44336;
 $color-green: #7EC362;
+$color-dark: #343a40;
 
 $color-bg: #F5F5F5 ;
 $color-bg-body: #FAFAFA ;
