--- a/twig/layout/banner.twig
+++ b/twig/layout/banner.twig
@@ -1,6 +1,6 @@
 <div class="banner">
     <div class="banner_inner">
-        <a href="#">
+        <a href="#" title="">
             <img src="http://via.placeholder.com/1920x700" alt=""/>
         </a>
     </div>
