--- a/twig/layout/footer.twig
+++ b/twig/layout/footer.twig
@@ -16,14 +16,7 @@
     <div class="container footer_container">
         <div class="row">
             <div class="col-md-6">
-                <div class="subcribe">
-                    <div class="">Mailing List</div>
-                    <form action="" class="subcribe_frm">
-                        <input type="text"/>
-                        <button class="">Sign</button>
-                    </form>
-                    <div class="">Sign up to get the latest on sales, new releases and more …</div>
-                </div>
+                {% include '../components/subcribe.twig' %}
             </div>
             <div class="col-md-2">
                 <div class="footer_menu">
