--- a/twig/page/index.twig
+++ b/twig/page/index.twig
@@ -16,7 +16,7 @@
                     </div>
                 </div>
 
-                <hr/>
+                <hr class="my50"/>
 
                 {% include '../components/home_blog.twig' %}
             </div>
