--- a/sass/helpers/_common.scss
+++ b/sass/helpers/_common.scss
@@ -209,7 +209,7 @@ hr {border-top: solid 1px $color-border-secondary;border-bottom: none;margin: 10
 //Main
 #main {}
 .page_main {padding: 0;}
-.page_body {}
+.page_body {padding: 50px 0}
 .main_container {}
 .main_header {}
 .main_title {margin: 0 0 10px;font-size: $font-size-bb;font-weight: $font-bold}
