--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,4 @@
-#footer{background: white;padding: 30px 0 0}
+#footer{background: white;padding: 50px 0}
 .footer_container {}
 //Footer top
 .footer_top {padding: 30px 0;border-bottom: solid 1px $color-border-secondary;margin: 0 0 30px}
@@ -16,8 +16,8 @@
 .footer_menu {
   @extend %reset-lst;
 }
-.footer_menu__item {padding: 4px 0;
-  a {
+.footer_menu__item {padding: 0 0 10px;
+  a {font-size: $font-size-s;font-family: $font-regular;
     &:hover {color: $color-brand}
   }
 }
