--- a/twig/layout/header.twig
+++ b/twig/layout/header.twig
@@ -1,6 +1,5 @@
 {% set arr = [
     { name: "Đặt nhanh", icon: "icon-link"},
-    { name: "Tin tức", icon: "news"},
     { name: "Thông báo", icon: "notify"},
     { name: "Đấu giá", icon: "icon-auction"},
     { name: "Giỏ hàng", icon: "icon-cart"},
@@ -13,11 +12,11 @@
         <div class="row">
             <div class="col-8 col-lg-3 header_col header_col__left">
                 <!--Logo-->
-                <h1 class="logo">
+                <h1 id="logo">
                     <a href="#" rel="home">
-                        <img src="" alt=""/>
+                        <img src="../../image/logo.svg" alt=""/>
                     </a>
-                    <p class="site_description">Chuyên may đo đồng phục</p>
+                    <span class="site_description">Chuyên may đo đồng phục</span>
                 </h1>
                 <!--//Logo-->
             </div>
@@ -27,6 +26,14 @@
                     <nav id="site-navigation" class="navigation_main">
                         <div class="menu-header-menu-container">
                             <div class="navtop_lst">
+                                <li>
+                                    <a href="#" title="SHOP">Tin tức</a>
+                                    <ul class="sub_menu">
+                                        {% for i in 0..3 %}
+                                        <li class="has_children"><a title="" href="#">Menu level 1</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                </li>
                                 {% for i in arr %}
                                 <li>
                                     <a href="#" title="{{ i.name }}">{{ i.name }}</a>
