--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "component/_product-item";
 @import "component/_home-blog";
 @import "component/_subcribe";
+@import "component/_block";
 
 
 @import "partials/_form";
