--- a/twig/page/index.twig
+++ b/twig/page/index.twig
@@ -9,7 +9,7 @@
                 <div class="product_collection">
                     <div class="row product_collection__row">
                         {% for i in 0..7 %}
-                        <div class="col-md-3 product_collection__col">
+                        <div class="col-6 col-md-4 col-lg-3 product_collection__col">
                             {% include '../components/product_item.twig' %}
                         </div>
                         {% endfor %}
