--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,6 +36,8 @@
 // Page-specific stylesheets
 
 @import "pages/_page-home";
+@import "pages/_page-activiti";
+@import "pages/_page-contact";
 
 
 // Vendors and external stylesheets
