--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "component/_home-blog";
 @import "component/_subcribe";
 @import "component/_block";
+@import "component/_gallery";
 
 
 @import "partials/_form";
@@ -36,6 +37,7 @@
 // Page-specific stylesheets
 
 @import "pages/_page-home";
+@import "pages/_page-product-detail";
 
 
 // Vendors and external stylesheets
