--- a/sass/helpers/_common.scss
+++ b/sass/helpers/_common.scss
@@ -194,7 +194,7 @@ hr {border-top: solid 1px $color-border-secondary;border-bottom: none;margin: 10
 }
 
 //Swiper
-.swiper-container {width: 100%;height: 100%;visibility: hidden;opacity: 0;
+.swiper-container {width: 100%;height: 100%;visibility: hidden;opacity: 0;display: flex;flex-direction: column;
   @include transition(all .3s ease);
   &.swiper-container-initialized {visibility: visible;opacity: 1}
   .swiper-slide { /* Center slide text vertically */
@@ -217,6 +217,5 @@ hr {border-top: solid 1px $color-border-secondary;border-bottom: none;margin: 10
 .bg-white{
   background: white;
 }
-
 
 
