--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "component/_home-blog";
 @import "component/_subcribe";
 @import "component/_block";
+@import "component/_gallery";
 
 
 @import "partials/_form";
@@ -38,6 +39,8 @@
 @import "pages/_page-home";
 @import "pages/_page-activiti";
 @import "pages/_page-contact";
+@import "pages/_page-product-detail";
+@import "pages/_page-about-us";
 
 
 // Vendors and external stylesheets
