--- a/twig/page/about.twig
+++ b/twig/page/about.twig
@@ -7,34 +7,55 @@
         {% include "../layout/header.twig" %}
         <div class="page_body">
             <div class="container">
-                <div class="about_us__container">
-                    <article class="about_us__data">
-                        <h4 class="about_us__title">US STORY</h4>
-                        <div class="about_us__content">
-                            <p>
-                                In Italian, Casa means House, and Ca is the abbreviation of Carpentería which means Carpenter. Hence, we took the name CasaCa as the meaning: the House of the Carpenter or briefly,
-                                the Carpenter’s House.
-                                We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
-                            </p>
-                            <p>
-                                We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
-                            </p>
-                        </div>
-                    </article>
-                    <article class="about_us__data">
-                        <h4 class="about_us__title">THE TEAM</h4>
-                        <div class="about_us__content">
-                            <p>
-                                In Italian, Casa means House, and Ca is the abbreviation of Carpentería which means Carpenter. Hence, we took the name CasaCa as the meaning: the House of the Carpenter or briefly,
-                                the Carpenter’s House.
-                                We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
-                            </p>
-                            <p>
-                                We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
-                            </p>
-                        </div>
+                <div class="block">
+                    <div class="block_header">
+                        <h3 class="block_title">US STORY</h3>
+                    </div>
+                    <div class="block_body">
+                        <article class="about_us__data">
+                            <div class="about_us__content">
+                                <div class="row">
+                                    <div class="offset-lg-1 col-12 col-lg-10">
+                                        <div class="row">
+                                            {% for i in 0..3 %}
+                                                <div class="col-6 col-md-3">
+                                                    <img src="http://via.placeholder.com/230x230" alt=""/>
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                                <p>
+                                    In Italian, Casa means House, and Ca is the abbreviation of Carpentería which means Carpenter. Hence, we took the name CasaCa as the meaning: the House of the Carpenter or briefly,
+                                    the Carpenter’s House.
+                                    We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
+                                </p>
+                                <p>
+                                    We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
+                                </p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                   <div class="block">
+                    <div class="block_header">
+                        <h3 class="block_title">THE TEAM</h3>
+                    </div>
+                    <div class="block_body">
+                        <article class="about_us__data">
+                            <div class="about_us__content">
+                                <p>
+                                    In Italian, Casa means House, and Ca is the abbreviation of Carpentería which means Carpenter. Hence, we took the name CasaCa as the meaning: the House of the Carpenter or briefly,
+                                    the Carpenter’s House.
+                                    We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
+                                </p>
+                                <p>
+                                    We're a small company made up of three carpenters, based just outside Hanoi in a beautiful workshop space in the filed. We specialise in hand crafting industrial style furniture from wood, fabric and iron. We making furniture with creativity, enthusiasm, and ingenuity. In addition. After doing some researches, we recognize that the more minimalist we live, the happier we are. We want to make your home a gentle space, so you can slowly enjoy yourself by every moment, every day and every season. Every single one of your orders is packed and dispatched with love!
+                                </p>
+                            </div>
 
-                    </article>
+                        </article>
+                    </div>
                 </div>
             </div>
         </div>
