--- a/twig/page/contact.twig
+++ b/twig/page/contact.twig
@@ -8,7 +8,7 @@
         <div class="page_body">
             <div class="container">
                 <div class="row">
-                    <div class="col-8 offset-md-2">
+                    <div class="col-12 col-lg-8 offset-lg-2">
                         <div class="contact_container">
                             <h2 class="contact_title">CONTACT US</h2>
                             <div class="contact_summary">
