--- a/sass/main.scss
+++ b/sass/main.scss
@@ -41,6 +41,7 @@
 @import "pages/_page-contact";
 @import "pages/_page-product-detail";
 @import "pages/_page-about-us";
+@import "pages/_page-blog";
 
 
 // Vendors and external stylesheets
