--- a/twig/layout/footer.twig
+++ b/twig/layout/footer.twig
@@ -38,9 +38,14 @@
             </div>
             <div class="col-md-4 col-lg-2">
                 <div class="footer_social">
-                    <div>Social</div>
+                    <div class="mb5">Social</div>
                     <div class="footer_social__lst">
-                        <a href="#" class="footer_social__item"></a>
+                        <a href="#" class="footer_social__item">
+                            <svg><use xlink:href="/image/sprite.svg#icon-pinterest"></use></svg>
+                        </a>
+                        <a href="#" class="footer_social__item">
+                            <svg><use xlink:href="/image/sprite.svg#icon-youtube"></use></svg>
+                        </a>
                     </div>
                 </div>
 
