--- a/twig/layout/header.twig
+++ b/twig/layout/header.twig
@@ -1,9 +1,10 @@
 {% set arr = [
-    { name: "Đặt nhanh", icon: "icon-link"},
-    { name: "Thông báo", icon: "notify"},
-    { name: "Đấu giá", icon: "icon-auction"},
-    { name: "Giỏ hàng", icon: "icon-cart"},
-    { name: "Nhắn tin", icon: "facebook-messenger"},
+    { name: "HOME", icon: "icon-link"},
+    { name: "SHOP", icon: "notify"},
+    { name: "ACTIVITIES", icon: "icon-auction"},
+    { name: "BLOG", icon: "icon-cart"},
+    { name: "ABOUT", icon: "facebook-messenger"},
+    { name: "CONTACT", icon: "facebook-messenger"},
 ] %}
 
 
@@ -27,7 +28,7 @@
                         <div class="menu-header-menu-container">
                             <div class="navtop_lst">
                                 <li>
-                                    <a href="#" title="SHOP">Tin tức</a>
+                                    <a href="#" title="SHOP">SHOP</a>
                                     <ul class="sub_menu">
                                         {% for i in 0..3 %}
                                         <li class="has_children"><a title="" href="#">Menu level 1</a></li>
