--- a/twig/layout/header.twig
+++ b/twig/layout/header.twig
@@ -27,11 +27,11 @@
                     <nav id="site-navigation" class="navigation_main">
                         <div class="menu-header-menu-container">
                             <div class="navtop_lst">
-                                <li>
-                                    <a href="#" title="SHOP">SHOP</a>
+                                <li class="has_children">
+                                    <a href="#" title="SHOP">MENU</a>
                                     <ul class="sub_menu">
                                         {% for i in 0..3 %}
-                                        <li class="has_children"><a title="" href="#">Menu level 1</a></li>
+                                        <li><a title="" href="#">Menu level 1</a></li>
                                         {% endfor %}
                                     </ul>
                                 </li>
