--- a/twig/page/activiti.twig
+++ b/twig/page/activiti.twig
@@ -23,7 +23,7 @@
                         <div class="activiti_group">
                             <div class="row activiti_row">
                                 {% for i in 0..3 %}
-                                    <div class="col-2 col-md-6 col-lg-3 activiti_item">
+                                    <div class="col-6 col-lg-3 activiti_item">
                                         <a href="#" title="" class="activiti_thumb">
                                             <img src="http://via.placeholder.com/340x230" alt=""/>
                                         </a>
